--- a/Parkedex/appsettings.Development.json
+++ b/Parkedex/appsettings.Development.json
@@ -8,5 +8,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Parkedex;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  },
+  "TokenKey":  "developmental secret"
 }
