--- a/client-app/package.json
+++ b/client-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@microsoft/signalr": "^5.0.5",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -13,6 +14,7 @@
     "@types/react-dom": "^17.0.3",
     "@types/yup": "^0.29.11",
     "axios": "^0.21.1",
+    "date-fns": "^2.21.1",
     "formik": "^2.2.6",
     "mobx": "^6.2.0",
     "mobx-react-lite": "^3.2.0",
