--- a/client-app/package.json
+++ b/client-app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "@types/google-map-react": "^2.1.0",
+    "@types/google-maps": "^3.2.2",
     "@types/jest": "^26.0.22",
     "@types/node": "^12.20.7",
     "@types/react": "^17.0.3",
