--- a/client-app/package.json
+++ b/client-app/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^12.20.7",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "@types/react-infinite-scroller": "^1.2.1",
     "@types/yup": "^0.29.11",
     "axios": "^0.21.1",
     "date-fns": "^2.21.1",
@@ -21,6 +22,7 @@
     "mobx-react-lite": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-infinite-scroller": "^1.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "semantic-ui-css": "^2.4.1",
