--- a/client-app/package.json
+++ b/client-app/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@types/react-infinite-scroller": "^1.2.1",
+    "@types/uuid": "^8.3.0",
     "@types/yup": "^0.29.11",
     "axios": "^0.21.1",
     "date-fns": "^2.21.1",
@@ -21,6 +22,7 @@
     "mobx": "^6.2.0",
     "mobx-react-lite": "^3.2.0",
     "react": "^17.0.2",
+    "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
     "react-infinite-scroller": "^1.2.4",
     "react-router-dom": "^5.2.0",
@@ -28,6 +30,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "typescript": "^4.2.4",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.1",
     "yup": "^0.32.9"
   },
@@ -57,6 +60,7 @@
   },
   "devDependencies": {
     "@types/googlemaps": "^3.43.3",
+    "@types/react-datepicker": "^3.1.8",
     "@types/react-router-dom": "^5.1.7"
   }
 }
