--- a/Parkedex/appsettings.Development.json
+++ b/Parkedex/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Parkedex;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost; Port=5432; User Id=admin; Password=Passw0rd; Database=Parkedex"
   },
   "TokenKey":  "developmental secret"
 }
