--- a/client-app/package.json
+++ b/client-app/package.json
@@ -31,12 +31,14 @@
     "semantic-ui-react": "^2.0.3",
     "typescript": "^4.2.4",
     "uuid": "^8.3.2",
+    "watch": "^1.0.2",
     "web-vitals": "^1.1.1",
     "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "postbuild": "rimraf ../Parkedex/wwwroot && move build ../Parkedex/wwwroot",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -61,6 +63,7 @@
   "devDependencies": {
     "@types/googlemaps": "^3.43.3",
     "@types/react-datepicker": "^3.1.8",
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "rimraf": "^3.0.2"
   }
 }
